fix: navbar on mobile height

--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ nav .allLinks {
   }
   .menu-btn {
     float: right;
+    margin-top: 5px;
   }
 }
 
@@ -129,7 +130,9 @@ nav .allLinks {
   height: 40px;
   cursor: pointer;
   margin-left: auto;
+  /* padding: 10px; */
   transform: all 0.5s ease-in-out;
+  transform: scale(1.1);
 }
 /* middle menu bar  */
 .menu-btn__burger {
@@ -199,6 +202,9 @@ nav .allLinks {
   }
   .logo_link {
     flex-direction: column;
+  }
+  nav{
+    height: 50px;
   }
 }
 
